2006-01-25 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>

	* Added copyright notices to all files
	* Created release.py file to contain relesase related information
	* Started egg_setup.py
	* Changed setup.py to use release.py
	*
	
2006-01-23  Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>

	* Default is now to insert non bound characters. 
	* rename pyreadline.py to rlmain.py
	* rename of config file to pyreadlineconfig.ini
	* Change to config file syntax
	* bell is now silent as deafult
	* removed specific keybinding code for keypad
	
2006-01-22  Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>

	* Default is now to insert non bound characters unless they are 
	  pressed together with control.
	* Added try except to read_inputrc
	* Fixed cleanup bug in keysyms, missing saveattr on console
	* Removed specific codepage code from keysyms
	

2006-01-22  Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>

	* Cleaned up bell handling to make sure you can disable bell with the 
	  bell_style command
	* Implemented rudimentary config file. Example in doc/.pyinputrc copy to
	  ~/.pyinputrc and edit to your taste.
	* Added patch from Ville to improve handling of international characters, 
	  though changed so that ctrl-character is not inserted.There are probably 
	  more weirdness to take into account than we do now...

2006-01-22  Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>

	* Renames of Console and PyReadline complete.
	
2006-01-22  Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>

	* This revision will not compile. Due to limitations in case 
	  insensitivethe filesystems subversion can not do casechanging
	  file renames in reliably. This version contains temporary 
	  renames of some files that makes the package unusable.
	  
	  
2006-01-21  Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>

	* Added README.txt 
	* Changed package name to pyreadline, changed setup.py to 
	  reflect this.
